--- a/emacs/.emacs.d/configuration.org
+++ b/emacs/.emacs.d/configuration.org
@@ -245,11 +245,11 @@ Let's make our shallow tabs into spaces.
 I used to display line numbers globally, but that got to be too much of a pain
 when I had to picemeal disable numbers for =mu4e=, the agenda, the terminal,
 and special modes. Now, we just enable line numbers for major programming
-languages -- those that derive from =prog-mode= -- and all files we open through =find-file=.
+languages -- those that derive from =prog-mode=. This doesn't include LaTeX, but
+that's okay.
 #+begin_src emacs-lisp
   (dolist (lines-mode
-           '(prog-mode-hook
-             find-file-hook))
+           '(prog-mode-hook))
     (add-hook lines-mode #'display-line-numbers-mode))
 #+end_src
 
