--- a/emacs/.emacs.d/configuration.org
+++ b/emacs/.emacs.d/configuration.org
@@ -120,6 +120,22 @@ use a simple package for this.
   (use-package restart-emacs)
 #+end_src
 
+** Dedicated Windows
+See this [[https://emacs.stackexchange.com/questions/2189/how-can-i-prevent-a-command-from-using-specific-windows][Stack Exchange question]].
+
+#+begin_src emacs-lisp
+  (defun npg/toggle-window-dedicated ()
+    "Control whether or not Emacs is allowed to display another
+  buffer in current window."
+    (interactive)
+    (message
+     (if (let (window (get-buffer-window (current-buffer)))
+           (set-window-dedicated-p window (not (window-dedicated-p window))))
+         "%s: Can't touch this!"
+       "%s is up for grabs.")
+     (current-buffer)))
+#+end_src
+
 * System
 ** Internal Files
 Add a temporary customization file so any variable customizations we make won't clutter =init.el=.
