--- a/fedora-environment.org
+++ b/fedora-environment.org
@@ -112,8 +112,8 @@ See the =git= directory for more information.
 Who wants to use Overleaf when you can use Emacs?
 #+begin_src bash
   TEMP=$(mktemp -d)
-  wget -qO- http://mirror.ctan.org/systems/texlive/tlnet/install-tl-unx.tar.gz | tar -C $TEMP -xvz
-  sudo $TEMP/install-tl-*/install-tl
+  wget -qO- http://mirror.ctan.org/systems/texlive/tlnet/install-tl-unx.tar.gz | tar -C $TEMP -xvz --strip-components=1
+  sudo $TEMP/install-tl
 #+end_src
 
 ** Rust
